Fixed bug on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -123,4 +123,8 @@ padding-top:5px;
 padding-right: 6px;
 padding-left: 6px;
 }
+.creed:hover {
+padding-right: 6px;
+padding-left: 6px;
+}
 }
